2019-09-03  Arndt Kaiser

	* fix unhandled string-truncations which are detected by new
	  gcc compiler versions

2019-08-20  Arndt Kaiser

	* use gobject-introspection bindings to access libgudev, because
	  the old python-library for libgudev is deprecated

2018-10-01  Arndt Kaiser

	* synce-pcp now aborts at the first error if copying a directory
	  with multiple files
	* synce-pls now aborts at the first error if traversing
	  multiple directories recursively

2017-03-21  Arndt Kaiser

	* tidy compiler warnings by removing _BSD_SOURCE and _SVID_SOURCE,
	  because both are deprecated since glibc 2.20
	* get rid of compiler warnings by removing unused variables

2017-02-08  Arndt Kaiser

	* use g_realloc() for iobuf-allocation because it's simpler,
	  prevents memory leaks and performs better

2017-02-07  Arndt Kaiser

	* improve error handling of failed async-reads
	* returned GErrors should be freed (memory leaks fixed)
	* don't start new async-reads while there are pending
	  async-reads during pinging the device
	* if a device is disconnected because it doesn't respond to pings,
	  the io-stream must be closed to abort the pending
	  async-read of the last ping. The aborted read also releases
	  the last reference to the device-object
	* remove unnecessary call to g_object_get()
	* remove synce_device_dbus_uninit() because dbus-uninit
	  is already done by synce_device_dispose()
	* raise required GIO Version to 2.30 because
	  g_dbus_interface_skeleton_export() is used

2017-02-01  Arndt Kaiser

	* prevent unintentional deletion of the pppd-pidfile in
	  scripts/synceconnector.py.in

2017-01-06  Arndt Kaiser

	* prevent devices from being registered multiple times

2017-01-05  Arndt Kaiser

	* fixed infinite loop in synce-serial-chat,
	  if stdin has been closed and read() returns 0
	* add missing python-modules in synceconnector
	* fix gcc (4.9) compile-error when compiling with "-Werror"
	* after a connection has been closed, the unused file of the